--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,67 @@
+/*Theme colors*/
 :root {
   --sky-blue: rgb(200, 217, 239);
   --midnight-blue: #000435;
   --banana: #FFEBAE;
   --pastel-yellow: #ffea99;
-  --butter: #F2D388;
-  --grey-blue: #A9B7C0;
-  --light-salmon: #EFD0C1;
   --mid-blue: rgb(77, 100, 154);
   --light-pink: rgb(237, 181, 184);
   --light-blue: #86B3D1;
   --alice-blue: rgb(240, 248, 255);
-  --orange-yellow: rgb(253,185,21);
+  --orange-yellow: rgb(253, 185, 21);
 }
-body{
+
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  font-family: "Oxygen", serif;
+  font-family: "Oxygen", sans-serif;
 }
-h1{
+
+/*For background image*/
+#background {
+  z-index: -1;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+h1 {
   font-family: "Nunito", sans-serif;
   display: inline-block;
 }
-h2{
+
+h2 {
   margin: 0.5em;
   font-size: 2em;
 }
-h2,h3 {
+
+h2, h3 {
   color: var(--alice-blue);
   font-family: "Nunito", sans-serif;
 }
+
 /*Nav-bar*/
 .navbar-nav {
   align-items: center;
   font-family: "Nunito", sans-serif;
 }
-.navbar-brand {
-  font-family: "Nunito", sans-serif;
-  color: var(--alice-blue);
-  font-size: 2.2rem;
+
+/*Logo on nav bar*/
+.navbar-brand img {
+  width: 130px;
+  padding-bottom: 5px
 }
+
 /*Change Bootstrap nav bar to custom theme*/
 .navbar-dark, .navbar[data-bs-theme=dark] {
-  border: 1px solid rgba(240, 248, 255,0.8);
-  background-color: rgba(0,4,53, 0.7);
+  border: 1px solid rgba(240, 248, 255, 0.8);
+  background-color: rgba(0, 4, 53, 0.7);
   --bs-navbar-color: rgba(255, 255, 255, 0.55);
   --bs-navbar-hover-color: var(--light-pink);
   --bs-navbar-active-color: var(--light-pink);
-  --bs-navbar-brand-color: var(--alice-blue);
-  --bs-navbar-brand-hover-color: var(--light-pink);
   --bs-navbar-toggler-border-color: var(--alice-blue);
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.5);
@@ -59,48 +70,52 @@ h2,h3 {
   padding: 0 1rem;
   backdrop-filter: blur(10px);
 }
+
+
 /*Hero section*/
-.hero-full-height{
+.hero-full-height {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   min-width: 100vw;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
   text-align: center;
 }
+
 .nav-link {
   color: var(--alice-blue);
 }
-.hero-section-content{
+
+.hero-section-content {
   max-width: 900px;
   padding: 3rem;
   color: var(--alice-blue);
   opacity: 0;
   animation: fade 2s ease-in forwards;
 }
-.hero-section-content h1{
+
+.hero-section-content h1 {
   font-size: 5rem;
 }
+
 /*hero section content fade animation*/
 @keyframes fade {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
+
 /*Button style*/
-.click-buttons{
+.click-buttons {
   display: inline-block;
   max-width: 400px;
   min-width: 80px;
   padding: 0.5rem 1rem;
   text-decoration: none;
-  background-color: rgba(77, 100, 154,0.7);
+  background-color: rgba(77, 100, 154, 0.7);
   backdrop-filter: blur(10px);
   color: var(--alice-blue);
   text-align: center;
@@ -113,12 +128,13 @@ h2,h3 {
   overflow: hidden;
   transition: all 0.5s ease;
 }
-/*Button hover animation*/
-.click-buttons::after{
-  content:"";
+
+/*Button styling and hover animation for all buttons*/
+.click-buttons::after {
+  content: "";
   position: absolute;
-  width:30em;
-  height:30rem;
+  width: 30em;
+  height: 30rem;
   background-color: var(--light-pink);
   border-radius: 50%;
   left: 50%;
@@ -128,70 +144,104 @@ h2,h3 {
   opacity: 0;
   transition: transform 0.5s ease-in;
 }
-.click-buttons:hover{
+
+.click-buttons:hover {
   color: var(--midnight-blue);
 }
-.click-buttons:hover::after, #dark-theme-label:hover::after {
+
+.click-buttons:hover::after{
   opacity: 1;
   transform: translate(-50%, -50%) scale(1);
 }
-section:not(#Contact){
-  padding: 5rem 1rem 1rem 1rem;
+
+/*Scroll animation to sections */
+/*In experimental stage. Only works on Chrome and Edge*/
+.scroll {
+  animation: scrolling linear;
+  /*start animation when content is in view*/
+  animation-timeline: view();
+  /*animation starts when content enters screen and finishes at 30% of view screen*/
+  animation-range: entry 0% cover 30%;
+}
+
+@keyframes scrolling {
+  0% {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+section:not(#Contact) {
+  padding: 7rem 1rem 1rem 1rem;
   min-height: 100vh;
 }
-#submit-button {
-  width: 300px;
-}
+
 /*About me section*/
 #About {
   display: flex;
+  justify-content: center;
   align-items: center;
   text-align: center;
 }
+
 #image-of-me {
   width: 70%;
   border-radius: 30px;
   box-shadow: 0 5px 20px 2px rgba(0, 0, 0, 0.5);
 }
+
 /*Resume section*/
 #Resume {
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
 }
-.resume-sub-heading{
+
+.resume-sub-heading {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1em;
 }
-.skills-content{
+
+.skills-content {
   display: flex;
   align-items: center;
 }
-.education-content{
+
+.education-content {
   display: flex;
   flex-direction: column;
   align-items: start;
 }
-.resume-ul{
+
+.resume-ul {
   padding: 1rem;
   border-bottom: 2px solid var(--alice-blue);
 }
-.resume-ul-last{
+
+.resume-ul-last {
   padding: 1rem;
 }
+
 #tech-skill-ul, #prof-skill-ul {
   width: 100%;
 }
+
 .education-content p {
-  margin:0;
+  margin: 0;
 }
+
 #camosun-ul {
-  border:none;
+  border: none;
 }
+
 /*Progress bar*/
-.progress-bar-container{
+.progress-bar-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -199,22 +249,21 @@ section:not(#Contact){
   width: 100%;
   margin: 2rem;
 }
+
 /*Progress bar custom design*/
 .progress, .progress-stacked {
   --bs-progress-height: 1rem;
   --bs-progress-font-size: 0.75rem;
   --bs-progress-border-radius: 50px;
-  --bs-progress-bar-bg: var(--pastel-yellow);
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: 30px;
   width: 70%;
   overflow: hidden;
-  font-size: var(--bs-progress-font-size);
-  border-radius: var(--bs-progress-border-radius);
   margin: 1rem;
   box-shadow: 0 0 10px 5px rgba(253, 185, 21, 0.7);
 }
+
 .progress-bar {
   padding-top: 1rem;
   display: flex;
@@ -222,107 +271,123 @@ section:not(#Contact){
   width: 100%;
   justify-content: end;
 }
+
 /*Bootstrap plug icons*/
 .progress-bar svg {
   height: 35px;
   width: 35px;
 }
+
 /*plug floating animation*/
 @keyframes float {
   0% {
     transform: translateY(0);
   }
-  50%{
-    transform: translateY(-10px);
+  50% {
+    transform: translateY(-13px);
   }
-  100%{
+  100% {
     transform: translateY(0);
   }
 }
+
 .plug {
   animation: float 3s ease-in-out infinite;
-  color:var(--orange-yellow);
+  color: var(--orange-yellow);
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  z-index: -1;
 }
+
 /*plug hover animation*/
 @keyframes plug {
-  0%{
-    transform:rotate(0deg);
+  0% {
+    transform: rotate(0deg);
   }
-  70%{
+  70% {
     transform: rotate(80deg) translate(10px, -10px);
   }
-  100%{
-    transform: rotate(90deg) translate(12px, -20px);
+  100% {
+    transform: rotate(90deg) translate(12px, -22px);
   }
 }
+
 /*Java plug animation on hover*/
-#java-progress-bar:hover .plug{
+#java-progress-bar:hover .plug {
   animation: plug 1s ease-in forwards;
 }
+
 /*Html plug animation on hover*/
-#html-progress-bar:hover .plug{
+#html-progress-bar:hover .plug {
   animation: plug 1s ease-in forwards;
 }
+
 /*Python plug animation on hover*/
-#py-progress-bar:hover .plug{
+#py-progress-bar:hover .plug {
   animation: plug 1s ease-in forwards;
 }
+
 /*Java progress bar animation on hover*/
 @keyframes java-progress {
-  41%{
+  41% {
     width: 0;
     background-color: var(--orange-yellow);
   }
   100% {
     width: 50%;
-    background-color: var(--orange-yellow);
+    background-color: var(--light-pink);
   }
 }
-#java-progress-bar:hover #java-progress-bar-status{
+
+#java-progress-bar:hover #java-progress-bar-status {
   animation: java-progress 2.5s ease-in forwards;
 }
+
 /*Html progress bar animation on hover*/
 @keyframes html-progress {
-  35%{
+  35% {
     width: 0;
     background-color: var(--orange-yellow);
   }
   100% {
     width: 80%;
-    background-color: var(--orange-yellow);
+    background-color: var(--light-pink);
+
   }
 }
-#html-progress-bar:hover #html-progress-bar-status{
+
+#html-progress-bar:hover #html-progress-bar-status {
   animation: html-progress 3s ease-in forwards;
 }
+
 /*Python progress bar animation on hover*/
 @keyframes py-progress {
-  50%{
+  50% {
     width: 0;
     background-color: var(--orange-yellow);
   }
   100% {
     width: 30%;
-    background-color: var(--orange-yellow);
+    background-color: var(--light-pink);
   }
 }
-#py-progress-bar:hover #py-progress-bar-status{
+
+#py-progress-bar:hover #py-progress-bar-status {
   animation: py-progress 2s ease-in forwards;
 }
+
 /* Project section */
 #Projects {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.card-container a{
-  text-decoration: none;
+
+.card-container {
   /*give card-container a 3D perspective depth for flip animation on hover*/
   perspective: 1000px;
 }
-.card{
-  min-width: 18rem;
+
+.card {
   margin: 0.5rem;
   box-shadow: -1px 1px 20px 1px var(--sky-blue);
   /*preserve the 3D depth of parent card-container*/
@@ -333,13 +398,16 @@ section:not(#Contact){
   background-color: var(--sky-blue);
   color: var(--midnight-blue);
 }
+
 .card-img-top {
   height: 18rem;
   object-fit: cover;
 }
+
 .card h4 {
   margin-bottom: 1rem;
 }
+
 /*Card animation*/
 .card-front, .card-back {
   width: 100%;
@@ -352,10 +420,12 @@ section:not(#Contact){
   backface-visibility: hidden;
   border-radius: 0.375rem;
 }
+
 .card-front {
   /*By default card is rotated 0 deg in Y axis*/
   transform: rotateY(0deg);
 }
+
 /*Set back side of card hidden by setting 180deg in Y axis*/
 .card-back {
   padding: 1.5rem;
@@ -364,96 +434,111 @@ section:not(#Contact){
   position: absolute;
   transform: rotateY(-180deg);
 }
-.card-container:hover .card{
+
+.card-container:hover .card {
   transform: rotateY(-180deg);
   backface-visibility: visible;
 }
-/*Scroll animation to .block elements */
-.scroll{
-  animation: scrolling linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 50%;
-}
-@keyframes scrolling{
-  0%{
-    opacity: 0;
-    transform: scale(0.7);
-  }
-  100%{
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+
 /*Contact section*/
 #Contact {
   display: flex;
   justify-content: center;
-  height: 50vh;
+  min-height: 50vh;
   padding: 5rem 1rem 1rem 1rem;
 }
-#contact-form{
+
+#contact-form {
   max-width: 1000px;
   width: 100%;
 }
+
+/*Customize bootstrap form input elements*/
 .form-control {
-  background-clip: padding-box;
-  border: var(--bs-border-width) solid var(--bs-border-color);
-  border-radius: var(--bs-border-radius);
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border: 2px solid var(--light-pink);
+  border-radius: 15px;
 }
-#contact-form div{
-  padding:1rem;
+
+#contact-form div {
+  padding: 1rem;
 }
+
+#submit-button {
+  width: 300px;
+}
+
 /*Theme change*/
 /*theme change labels*/
 input[name=theme-change] {
   display: none;
 }
-.theme-change-labels{
+
+.theme-change-labels {
   position: fixed;
   bottom: 3rem;
   left: 1rem;
 }
+
 #dark-theme-label {
-  background-color: rgba(77, 100, 154,0.9);
+  background-color: rgba(77, 100, 154, 0.9);
   border: 1px solid rgba(240, 248, 255, 0.9);
 }
+
 #light-theme-label {
   background-color: rgba(240, 248, 255, 0.9);
   color: var(--midnight-blue);
-  border: 1px solid rgba(77, 100, 154,0.9);
+  border: 1px solid rgba(77, 100, 154, 0.9);
 }
-/*Dark theme (default)*/
-body:has(#dark-theme:checked) {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+
+/*Background image change for theme change*/
+body:has(#dark-theme:checked) #background {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
   url("../images/dark-theme-3.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-  color: var(--alice-blue);
 }
+
+/*Text color change to light for dark theme*/
+body:has(#dark-theme:checked),
 body:has(#dark-theme:checked) p:not(.card p),
 body:has(#dark-theme:checked) h1,
 body:has(#dark-theme:checked) h2,
-body:has(#dark-theme:checked) h3{
+body:has(#dark-theme:checked) h3 {
   color: var(--alice-blue);
 }
-/*Light theme*/
-body:has(#light-theme:checked) {
+
+/*Background image change for theme change*/
+body:has(#light-theme:checked) #background {
   background-image: url("../images/light-theme-1.jpg");
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  color: var(--midnight-blue);
 }
+
+/*Text color change to dark for light theme*/
+body:has(#light-theme:checked),
 body:has(#light-theme:checked) p,
 body:has(#light-theme:checked) h1,
 body:has(#light-theme:checked) h2,
-body:has(#light-theme:checked) h3{
+body:has(#light-theme:checked) h3 {
   color: var(--midnight-blue);
 }
-body:has(#light-theme:checked) .card{
+
+body:has(#light-theme:checked) body:is(p,h1,h2,h3) {
+  color: var(--midnight-blue);
+}
+
+/*Change shadow box shadow color of cards when light theme*/
+body:has(#light-theme:checked) .card {
   box-shadow: -1px 1px 20px 1px rgba(0, 0, 0, 0.5);
 }
+
+/*change theme change button colors when clicked*/
+body:has(#light-theme:checked) #light-theme-label {
+  background-color: var(--light-pink);
+  transition: background-color 0.5s;
+}
+
+body:has(#dark-theme:checked) #dark-theme-label {
+  background-color: var(--light-pink);
+  transition: background-color 0.5s;
+}
+
 /*Footer*/
 footer {
   display: flex;
@@ -462,26 +547,34 @@ footer {
   background-color: var(--midnight-blue);
   margin-top: 1rem;
 }
-footer svg{
+
+footer svg {
   color: var(--alice-blue);
 }
-footer svg:hover ,footer a:hover{
+
+/*Footer elements hover effect*/
+footer svg:hover, footer a:hover {
   color: var(--light-pink);
   cursor: pointer;
+  transform: scale(1.1);
+  transition: scale 0.3s ease;
 }
-footer a{
+
+footer a {
   text-decoration: none;
   color: var(--alice-blue);
 }
+
 /*Media query for tablets (medium screen >= 768px) */
 @media screen and (min-width: 768px) {
   .hero-section-content {
     font-size: 1.5rem;
   }
 }
+
 /*Media query for lap-tops of computer screens (xl >= 1200px)*/
 @media screen and (min-width: 1200px) {
   #image-of-me {
-    width: 85%;
+    width: 80%;
   }
 }
